# xiangqi

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
xiangqi/: __init__.py  board.py  constants.py  env.py  helper.py  piece.py
xiangqi/force/: __init__.py  bing.py  ju.py  ma.py  pao.py  shi.py  shuai.py  xiang.py
xiangqi/tests/: test_board_repr.py  test_parse_action.py  test_sth.py  test_valid_moves.py
