[metadata]
name = xiangqi
version = attr: xiangqi.__version__
author = Splendor
author_email = splendor.kill@gmail.com
description = 中国象棋环境
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/xiangqi
project_urls =
    Bug Tracker = https://github.com/pypa/xiangqi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = .
exclude =
    = tests
