[metadata]
name = xiangqi
version = attr: xiangqi.__version__
author = Splendor
author_email = splendor.kill@gmail.com
description = Chinese Chess Environment for Reinforcement Learning
keywords = Zhong Guo Xiang Qi, Chinese chess, OpenAI Gym-compatible, 中国象棋, 强化学习环境
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/splendor-kill/xiangqi
project_urls =
    Bug Tracker = https://github.com/splendor-kill/xiangqi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = true
install_requires =
    numpy

[options.packages.find]
where = .
exclude =
    = tests
